# ai-assistant

./: .conda_config  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_assistant.py  conda_requirements.txt  config.yaml  install.sh  pyproject.toml  test_ollama.py
archives/: styles.tcss
src/ai_assistant/: __init__.py  cli.py  config.py
src/ai_assistant/assistant/: __init__.py  chat.py  code_gen.py  code_review.py  prompts.py
src/ai_assistant/docs/: __init__.py  chunker.py  config.py  parsers.py  prompts.py  rag.py  sharepoint.py  store.py
src/ai_assistant/email/: __init__.py  client.py  schema.py  search.py  summarizer.py
src/ai_assistant/models/: __init__.py  base.py  ollama_backend.py
src/ai_assistant/tui/: __init__.py  app.py  styles.tcss
src/ai_assistant/web/: __init__.py  apps.py  services.py  settings.py  urls.py  wsgi.py
src/ai_assistant/web/static/css/: style.css
src/ai_assistant/web/static/js/: app.js
src/ai_assistant/web/templates/: base.html  chat.html  code_gen.html  code_review.html  docs.html  email.html  settings.html
src/ai_assistant/web/templatetags/: web_extras.py
src/ai_assistant/web/views/: api.py  chat.py  code_gen.py  code_review.py  docs.py  email.py  settings_view.py
tests/: conftest.py  test_chat.py  test_config.py  test_email_client.py  test_email_summarizer.py  test_ollama_backend.py
tests/docs/: test_chunker.py  test_parsers.py  test_rag.py  test_store.py
