[project]
name = "ai-assistant"
version = "0.1.0"
description = "AI-powered development assistant with local model serving and email integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tui = [
    "textual>=3.0",
]
mlx = [
    "mlx-lm>=0.18",
]
graph = [
    "msal>=1.28",
    "msgraph-sdk>=1.0",
]

[project.scripts]
ai-assist = "ai_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (require running services)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py313"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-httpx>=0.30",
]
